--- a/src/plan/CMakeLists.txt
+++ b/src/plan/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_library(plan SHARED plan.cpp)
+add_library(planner SHARED planner.cpp)
+target_link_libraries(planner server_common system_handle)
