--- a/src/plan/CMakeLists.txt
+++ b/src/plan/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_library(planner SHARED planner.cpp)
-target_link_libraries(planner server_common system_handle)
+target_link_libraries(planner system_handle)
