--- a/src/system/index/CMakeLists.txt
+++ b/src/system/index/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_library(system_index SHARED
         index_manager.cpp)
 
-target_link_libraries(system_index system_handle)
+target_link_libraries(system_index handle_index)
