--- a/src/system/table/CMakeLists.txt
+++ b/src/system/table/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_library(system_table
+add_library(system_table SHARED
         table_manager.cpp
 )
 
-target_link_libraries(system_table system_handle)
+target_link_libraries(system_table handle_table)
